# rust-ark0f-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: ci.yml  coverage.yml  template.yml
